Changed foundation location

--- a/www/common.scss
+++ b/www/common.scss
@@ -1,3 +1,2 @@
-@import "~vendor/foundation.scss";
+@import "~scss/foundation.scss";
 @include foundation-everything( true );
-@import "~scss/theme.scss";
